# 2026-KUSITMS-GLIT-AI

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/api/: health.py
app/api/v1/: __init__.py  health.py  ping.py
app/core/: config.py  logging.py  security.py
experiments/: README.md
tests/: conftest.py  test_config.py  test_health.py  test_security.py
